# WEB-HW-07

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seeds.py
database/: db.py
migrations/versions/: 8b9f8b256892_init.py
