[tool.poetry]
name = "web7hw-sec"
version = "0.1.0"
description = ""
authors = ["Dmyto Marchenko <d.i.marchenko@student.khai.edu>"]
readme = "README.md"
packages = [{include = "web7hw_sec"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.13"
faker = "^18.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
